--- a/pages/services/game-app-development/game-css/ios.module.css
+++ b/pages/services/game-app-development/game-css/ios.module.css
@@ -8,3 +8,14 @@
   height: 100vh;
   width: 100%;
   }
+
+
+
+  .OurSuite{
+    line-height: 1.2;
+    margin: 0 0 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+}
