--- a/styles/css/Navbar.css
+++ b/styles/css/Navbar.css
@@ -43,50 +43,19 @@
   }
 }
 
-.nav-item:checked .dropdown-toggle {
-  transition: 0.5 all !important;
-  -webkit-transition: 0.5 all !important;
-  -moz-transition: 0.5 all !important;
-  -ms-transition: 0.5 all !important;
-  -o-transition: 0.5 all !important;
-}
-.nav-item:checked .dropdown-toggle::after {
-  transform: rotate(180deg);
-}
 
 /* =========  hover dropdown menu  ============= */
-
-/* .navbar-nav > li > .dropdown-menu {
-  margin-top: 0;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  display: block;
-  opacity: 0;
-  transition: ease-out 0.3s;
+.nav-item:hover .dropdown-toggle::after {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
 }
-.dropdown:hover .dropdown-menu {
-  opacity:1;
-}  */
-
-/* .dropdown-menu1
-{
-border:none;
-display: block;
-opacity:1;
-height: 0px;
-overflow: hidden;
-padding: 0px;
-top: 180px;
-transition: all .3s;
-}
-.dropdown:hover .dropdown-menu1
-{
-display: block;
-top: 100%;
-height: inherit;
-}  */
-
-
 .hoverNone:hover{
   color: black;
+}
+
+.active:after{
+  color: red!important;
 }
