--- a/styles/css/quote.module.css
+++ b/styles/css/quote.module.css
@@ -4,3 +4,11 @@ background: -webkit-linear-gradient(to right, #92FE9D, #00C9FF);
 background: linear-gradient(to right, #92FE9D, #00C9FF);
 
 }
+
+.qbutton{
+    background-color: #424595;
+    border-radius: 10px;
+    color: #fff;
+    width: 100%;
+    height: 60px;
+}
