--- a/styles/css/services/wireframe.css
+++ b/styles/css/services/wireframe.css
@@ -362,11 +362,9 @@ picture img {
 }
 
 .web-why-choose-us-inner-box h5 {
-    font-size         : 18px;
+    font-size         : 1.5rem;
     font-weight       : 500;
     width             : calc(100% - 75px);
-    float             : left;
-    padding-left      : 10px;
     margin-bottom     : 15px;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition   : all .3s ease-in-out;
